# gstr

./: Dockerfile  LICENSE  docker-compose.yml  pyproject.toml  setup.py
gstr/: __init__.py  app.py  autodetect.py  caps.py  core.py  default_pipeline.py  element.py  flv.py  h264.py  pango.py  playback.py  rtmp.py  rtp.py  rtsp.py  sink.py  videoconvertscale.py  videorate.py
