[project]
name = "gstr"
version = "0.1.0"
description = "Easy to build gstreamer pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
packages = ["gstr"]

[tool.black]
line-length = 88
skip-string-normalization = true

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
